tests/error/typedef_func_tmpl_types2.gw
#! [contains] pre-defined types
typedef void t_ptr<~A~>();
typedef <~int~>t_ptr B;

fun void test<~A~>() {
  <<< __func__ >>>;
}

test @=> B b;
#!<<< iptr<~int~>() >>>;
<<< b() >>>;
<<< b<~int~>() >>>;
